Fix invisible tooltip text by replacing duplicate IDs with classes

--- a/src/Components/InteractiveHouseChoice/Tooltip/Tooltip.scss
+++ b/src/Components/InteractiveHouseChoice/Tooltip/Tooltip.scss
@@ -34,58 +34,76 @@
         margin: 15px 0px;
         width: 100%;
         display: grid;
-        grid-template-columns: auto auto auto;
+        grid-template-columns: 1fr 40px auto;
         grid-template-rows: auto auto auto;
-        grid-gap: 10px;
+        grid-gap: 5px;
         row-gap: 15px;
+        align-items: center;
     }
 
-    #floor-area-icon {
+    .disposition {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: black;
+    }
+
+    .floor-area-icon {
         width: 17px;
         height: 17px;
         display: inline-block;
-        margin-left: 15px;
         border: 1px solid $yellow;
         border-radius: 1px;
-        align-self: center;
+        grid-column: 2 / 3;
+        grid-row: 1 / 1;
+        justify-self: center;
     }
 
-    #floor-area {
+    .floor-area {
         grid-column: 3 / 4;
         grid-row: 1 / 1;
+        font-size: 1.2rem;
+        color: black;
     }
 
-    #lot-area-icon {
-        grid-column: 1 / 3;
+    .lot-area-icon {
+        width: 30px;
+        height: 15px;
+        grid-column: 2 / 3;
         grid-row: 2 / 2;
         border: 1px solid $yellow;
         position: relative;
-        max-width: 90px;
+        justify-self: center;
 
         &::before {
             content: "";
-            width: 15px !important;
-            height: 15px !important;
+            width: 16px !important;
+            height: 20px !important;
             display: inline-block;
             background-color: white;
-            border: 1px solid $yellow;
-            border-radius: 1px;
             position: absolute;
-            top: -5px;
+            top: -10px;
             left: 10px;
-
+            border-left: 1px solid $yellow;
+            border-bottom: 1px solid $yellow;
         }
     }
 
-    #lot-area {
+    .lot-area {
         grid-column: 3 / 4;
         grid-row: 2 / 2;
-
+        font-size: 1.2rem;
+        color: black;
     }
 
-    #price {
+    .price {
         grid-column: 1 / 4;
         grid-row: 3 / 3;
+        font-weight: 400;
+        font-size: 1.6rem;
+        margin-top: 10px;
+        color: black;
     }
 
     img {
